--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Lobster&family=Montserrat:wght@100;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>Ada's Portfolio Website</title>
   </head>
   <body>
