--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Ada Cheung's Portfolio Website"
     />
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Lobster&family=Montserrat:wght@100;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Martel&family=Lobster&family=Montserrat:wght@100;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>Ada's Portfolio Website</title>
   </head>
